<resources>
    <string name="app_name" translatable="false">Covid_19</string>
    <string name="total_cases" translatable="false">Total Cases</string>
    <string name="recovered" translatable="false">Recovered</string>
    <string name="today_recovered" translatable="false">Today Recovered</string>
    <string name="deaths" translatable="false">Deaths</string>
    <string name="active" translatable="false">Active</string>
    <string name="global_stats" translatable="false">Global Stats</string>
    <string name="critical" translatable="false">Critical</string>
    <string name="total_deaths" translatable="false">Total Deaths</string>
    <string name="today_deaths" translatable="false">Today Deaths</string>
    <string name="affected_countries" translatable="false">Affected Countries</string>
    <string name="list_countrys" translatable="false">List Countries</string>
    <string name="cases" translatable="false">Cases</string>
    <string name="today_cases" translatable="false">Today Cases</string>
    <string name="emeni" translatable="false">پروتکل های بهداشتی</string>
    <string name="toast_activity_list" translatable="false">Click on countries for more informationClick on countries for more information</string>
    <string name="today" translatable="false">Today</string>
    <string name="coronaـstatistics" translatable="false">Corona statistics</string>
    <string name="abuot_me" translatable="false">About me</string>
    <string name="abuot_covid" translatable="false">About Covid</string>
    <string name="health_protocols" translatable="false">Health Protocols</string>
    <string name="mask" translatable="false">Mask</string>
    <string name="dast" translatable="false">Hand Washing</string>
    <string name="eys" translatable="false">Do Not Touch The Eyes</string>
    <string name="zedofoni" translatable="false">Disinfect</string>
    <string name="fasle" translatable="false">Observe The Distance</string>
    <string name="Corona_test" translatable="false">Corona test</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="Discrip" translatable="false">Coronaviruses are a group of related RNA viruses that cause diseases in mammals and birds. In humans and birds, they cause respiratory tract infections that can range from mild to lethal. Mild illnesses in humans include some cases of the common cold (which is also caused by other viruses, predominantly rhinoviruses), while more lethal varieties can cause SARS, MERS and COVID-19, which is causing an ongoing pandemic. In cows and pigs they cause diarrhea, while in mice they cause hepatitis and encephalomyelitis.
Coronaviruses constitute the subfamily Orthocoronavirinae, in the family Coronaviridae, order Nidovirales and realm Riboviria.[3][4] They are enveloped viruses with a positive-sense single-stranded RNA genome and a nucleocapsid of helical symmetry.[5] The genome size of coronaviruses ranges from approximately 26 to 32 kilobases, one of the largest among RNA viruses.[6] They have characteristic club-shaped spikes that project from their surface, which in electron micrographs create an image reminiscent of the solar corona, from which their name derives.[7]</string>
    <string name="name" translatable="false">Alisarang</string>
    <string name="ehtmalcam" translatable="false">You are very unlikely to have a corona, but if you like, you can see a doctor for comfort</string>
    <string name="ehtmalmotovaset" translatable="false">You are less likely to have coronary but it is better to see a doctor</string>
    <string name="ehtmalziad" translatable="false">See your doctor as soon as possible if you have a corona</string>
    <string name="ehtmalglyziad" translatable="false">You are very likely to see a doctor at the first opportunity</string>

    <string-array name="covid_test_array" translatable="false">
        <item>"Is your body temperature 37 or higher?"</item>
        <item>"Do you feel tired and weak?"</item>
        <item>"Do you cough?"</item>
        <item>"Did you lose your sense of smell and taste?"</item>
        <item>"Do you feel pain in your chest?"</item>
        <item>"Do you have a sore throat?"</item>
        <item>"Do you have a headache?"</item>
        <item>"Have you recently met with infected people?"</item>
        <item>"Do you have heartburn?"</item>
    </string-array>
    <string name="about_me" translatable="false">Hello, I am Ali Saranj, born on October 5, 2005 in Isfahan. I have been working in the field of Android programming for 2 years. Programming is my biggest interest in life. I learned programming in a completely self-taught way. It was my destiny to be able to understand how much I was able to become self-taught during these two years and what level I am now compared to the rest.</string>
    <string name="natige_coroma">Corona test result</string>
    <string name="abart" translatable="false">Phrasebook application features</string>
    <string name="abot_test_covid" translatable="false">Corona test: In this part, the program will ask you questions and according to your answers to the questions, you will say how likely you are to have a corona</string>
    <string name="about_abut_covid" translatable="false">About Corona: In this section you will be given information about Corona which was the source of this site https://en.wikipedia.org/wiki/COVID-19</string>
    <string name="about_about_me" translatable="false">About us: In this section, you will get acquainted with the creator of this program. Also, the blog of the manufacturer\'s contact number and email is in this section.</string>
    <string name="about_amar_covid">Corona statistics: In this section, you can view the corona statistics of the whole world and each country of the world online and up to date.\nSources: https://corona.lmao.ninja/v2/Countries?yesterday=true&amp;sort / https://corona.lmao.ninja/v2/all/</string>


</resources>