<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".HelpActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toll_bar_help"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_back_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abart"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:autoLink="web"
            android:gravity="right"
            android:text="@string/about_amar_covid"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/statistic"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="right"
            android:text="@string/abot_test_covid"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/testing"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="right"
            android:text="@string/about_abut_covid"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:autoLink="web"/>

        <ImageView
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/aboutcovid"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="right"
            android:text="@string/about_about_me"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/user"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

</LinearLayout>