<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgrand"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/recovery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/coronaـstatistics"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_main_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"

                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/statistic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/coronaـstatistics"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/recovery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/coronaـstatistics"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_main_about_covid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/aboutcovid" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/abuot_covid"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_main_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/abuot_me"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"

                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="16dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="16dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/recovery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/coronaـstatistics"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>